KC-3624 #fixed too much space wasted on shop page

--- a/public/css/front_end/all.less
+++ b/public/css/front_end/all.less
@@ -3762,7 +3762,7 @@ input[type="submit"]::-moz-focus-inner{
 		}
 	}
 	#main{
-		padding-bottom: 26px;
+		padding-top: 10px;
 	}
 	.buttons{
 		.btn{
